[project]
name = "tiktok-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.3",
    "yt-dlp>=2025.3.31",
    "yt-dlp-types>=0.0.15",
    "twilio>=9.6.1",
    "python-multipart>=0.0.20",
    "twilio-stubs>=0.2.0",
    "uvicorn>=0.34.2",
]
